--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
   </head>
 
   <body>
-
+  <header>
     <h1>Voice of America</h1>
     <form>
       <input type="search" placeholder="Search..."/>
       <input type="submit" value="Submit"/>
     </form>
-
+    <nav>
     <ul>
       <li><a href="article.html">Home</a></li>
       <li><a href="article.html">World</a></li>
       <li><a href="article.html">Silicon Valley &amp; Tech</a>
       <li><a href="article.html">Science &amp; Health</a></li>
       <li><a href="article.html">U.S. Politics</a></li>
-    </ul>
-
+      </ul> </nav>
+    </header>
+    <main>
     <h2>Silicon Valley &amp; Technology</h2>
 
     <h3>Tehran Bans Drones After Security Scares</h3>
@@ -44,17 +45,24 @@
 
     <p><a href="article.html">Read More</a></p>
 
+    
+  <section>  
     <h2>More Stories</h2>
-
+  <article>
     <h3><a href="article.html">Big Data and the Business of Mind-Reading</a></h3>
     <img src="300.png" alt="Lots and lots of numbers" />
-
+    </article>
+    <article>
     <h3><a href="article.html">Google Chromebooks on Rise</a></h3>
-    <img src="300.pg" alt="Google Chromebook" />
-
+    <img src="300.png" alt="Google Chromebook" />
+    </article>
+    <article>
     <h3><a href="article.html">Immediacy Twitter Provides Overrated, Some Experts Say</a></h3>
     <img src="300.png" alt="Trump tweets" />
-
+    </article>
+  </section>
+    </main>
+    <footer>
     <h2>Other ways to access VOA</h2>
 
     <ul>
@@ -91,6 +99,7 @@
     </ul>
 
     <p><small>Voice of America Address: 330 Independence Avenue, S.W., Washington, D.C. 20237</small></p>
-
+    </footer>
+      
   </body>
 </html>
