--- a/article.html
+++ b/article.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Voice of America</title>
   </head>
 
   <body>
@@ -24,9 +25,9 @@
 
     <h3>Google Chromebooks on the Rise</h3>
 
-    <img src="600.png" />
+    <img src="600.png" alt="Chromebooks"/>
 
-    <p>A Google Chromebook on display in New York, Feb. 8, 2017. <em>Photo: Google</em>.
+    <p>A Google Chromebook on display in New York, Feb. 8, 2017. <em>Photo: Google</em>.</p>
 
     <p>NEW YORK &mdash; The Google Chromebook, a type of stripped-down laptop, isn't a practical mobile device for many people - mostly because it basically turns into an expensive paperweight whenever it can't find a Wi-Fi connection.</p>
 
@@ -91,7 +92,7 @@
       <li>Americas</li>
     </ul>
 
-    <p><small>Voice of America Address: 330 Independence Avenue, S.W., Washington, D.C. 20237</p>
+    <p><small>Voice of America Address: 330 Independence Avenue, S.W., Washington, D.C. 20237</small></p>
 
   </body>
 </html>
