--- a/article.html
+++ b/article.html
@@ -6,13 +6,13 @@
   </head>
 
   <body>
-
+  <header>
     <h1>Voice of America</h1>
     <form>
       <input type="search" placeholder="Search..."/>
       <input type="submit" value="Submit"/>
     </form>
-
+  <nav>
     <ul>
       <li>Home</li>
       <li>World</li>
@@ -20,9 +20,13 @@
       <li>Science &amp; Health</li>
       <li>U.S. Politics</li>
     </ul>
-
+  </nav>
+  </header>
+  <main>
+  <article>
     <h2>Silicon Valley &amp; Technology</h2>
-
+  </article>
+  <article>
     <h3>Google Chromebooks on the Rise</h3>
 
     <img src="600.png" alt="Chromebooks"/>
@@ -39,7 +43,8 @@
 
     <p>Google and its manufacturing partners are trying to shed the Chromebook's perception as underperforming budget devices. But even with premium models, expanding beyond U.S. schools won't be easy.</p>
 
-
+  </article>
+  <section>
     <h4>More Silicon Valley &amp; Tech News</h4>
 
     <ul>
@@ -56,7 +61,9 @@
       <li>Tech Goes to Work to Help Europe's Refugees Assimilate</li>
       <li>Olive Oil Key to a Healthy Heart</li>
     </ul>
-
+    </section>
+    </main>
+    <footer>
     <h2>Other ways to access VOA</h2>
 
     <ul>
@@ -93,6 +100,6 @@
     </ul>
 
     <p><small>Voice of America Address: 330 Independence Avenue, S.W., Washington, D.C. 20237</small></p>
-
+    </footer>
   </body>
 </html>
